--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -23,7 +23,8 @@ jobs:
       - name: Determine image tag
         id: vars
         run: |
-          IMAGE_TAG="ghcr.io/${{ github.repository_owner }}/laboratoiresion:$BRANCH_NAME"
+          BRANCH_NAME=$(echo $GITHUB_REF | awk -F/ '{print $3}')
+          IMAGE_TAG="ghcr.io/${{ github.repository_owner }}/laboratoiresion-v1:$BRANCH_NAME"
           echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
 
       - name: Build Docker image
