--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -25,6 +25,7 @@ jobs:
         run: |
           BRANCH_NAME=$(echo $GITHUB_REF | awk -F/ '{print $3}')
           IMAGE_TAG="ghcr.io/${{ github.repository_owner }}/laboratoiresion-v1:$BRANCH_NAME"
+          echo "BRANCH_NAME=$BRANCH_NAME" >> $GITHUB_ENV
           echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
 
       - name: Build Docker image
