--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -57,19 +57,11 @@ jobs:
           BRANCH_NAME=$(echo $GITHUB_REF | awk -F/ '{print $3}')
           ssh -o StrictHostKeyChecking=no ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} "
             export BRANCH_NAME=$(echo ${GITHUB_REF##*/}) &&
-            docker stop easylab-${BRANCH_NAME} || true
-            docker rm easylab-${BRANCH_NAME} || true
+            docker stop laboratoiresion-v1:${BRANCH_NAME} || true
+            docker rm laboratoiresion-v1:${BRANCH_NAME} || true
             cd /home/github/laboratoiresion &&
             echo '🔹 Pulling latest image...'
             docker compose pull web &&
             echo '🔹 Restarting container...'
-            docker compose up -d --remove-orphans
-
-            echo '🔹 Checking SSL certificate...'
-            if [ ! -f /etc/letsencrypt/live/dev.laboratoiresion.org/fullchain.pem ]; then
-              echo '🔸 Generating new SSL certificates...'
-              sudo certbot --nginx -d dev.laboratoiresion.org --non-interactive --agree-tos -m admin@laboratoiresion.org
-            else
-              echo '✅ SSL certificate already exists.'
-            fi
+            docker compose up -d --remove-orphans &&
             echo '✅ Deployment completed.'"
