--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -3,7 +3,7 @@ name: Laboratoires Sion Dev CI/CD
 on:
   push:
     branches:
-      - actions
+      - '**'
 
 jobs:
   build:
@@ -38,6 +38,8 @@ jobs:
     name: Deploy to VPS
     runs-on: ubuntu-latest
     needs: build
+    if: github.ref == 'refs/heads/main'
+
 
     steps:
       - name: Checkout repository
