--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "motion": "^12.23.24",
     "next": "15.3.8",
     "nextjs-toploader": "^3.9.17",
+    "radix-ui": "^1.4.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
